[package]
name = "wasm_{{crate_name}}"
version = "0.1.0"
edition = "2021"
workspace = "../.."

[features]
default = []
inspect = ["game/inspect", "wasm-logger"]

[dependencies]
bevy.workspace = true
log.workspace = true
{{crate_name}} = { path = "../.." }
yew = { version = "0.20", features = ["csr"] }

wasm-logger = { version = "0.2.0", optional = true }
web-sys = { version = "0.3.64", features = ["Document", "Window"] }
